--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <script src="https://d3js.org/d3.v7.js"></script>
-        <script src="linechart.js"></script>
+        <script src="script.js"></script>
+        <script src="./idioms/linechart.js"></script>
     </head>
-    <body onload="startDashboard()">
+    <body onload="init()">
         <div class="dashboard">
             <div class="visualization" id="lineChart"></div>
         </div>
