reset selection button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body onload="init()">
         <div class="dashboard">
             <div class="visualization" id="lineChart"></div>
+            <button id="resetButton">Reset Selection</button>
         </div>
     </body>
 </html>
