--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
         <script src="https://d3js.org/d3.v7.js"></script>
         <script src="script.js"></script>
         <script src="./idioms/linechart.js"></script>
+        <script src="./idioms/timeline.js"></script>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body onload="init()">
         <div class="dashboard">
             <div class="visualization" id="lineChart"></div>
             <button id="resetButton">Reset Selection</button>
+
+            <div class="visualization" id="timeline"></div>
+            <div class="visualization" id="tooltip"></div>
         </div>
     </body>
 </html>
