--- a/index.html
+++ b/index.html
@@ -6,29 +6,30 @@
     <script src="./idioms/linechart.js"></script>
     <script src="./idioms/timeline.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body onload="init()">
+  <body onload="init()" class="h-screen overflow-y-hidden">
+    <div class="flex flex-col h-full">
+      <div class="flex flex-1">
+        <div class="flex-1 bg-blue-200">Choropleth Map</div>
+        <div class="flex-1 bg-blue-300">Chord Diagram 1</div>
+        <div class="flex-1 bg-blue-400">Chord Diagram 2</div>
+      </div>
 
-    <body class="h-screen">
-        <div class="flex flex-col h-full">
-            <!-- Top Half -->
-            <div class="flex flex-1">
-                <div class="flex-1 bg-blue-200">Choropleth Map</div>
-                <div class="flex-1 bg-blue-300">Chord Diagram 1</div>
-                <div class="flex-1 bg-blue-400">Chord Diagram 2</div>
-            </div>
-            <!-- Bottom Half -->
-            <div class="flex-1">
-                <button id="resetButton" class="bg-blue-500 hover:bg-blue-700 text-white font-bold h-8 px-4 m-2 text-sm rounded">Reset Selection</button>
-                <div class="flex items-center justify-center bg-red-300">
-                    <div class="visualization" id="lineChart" style="width: 100%;"></div>
-                    <!-- <div class="visualization" id="timeline"></div>
-                    <div class="visualization" id="tooltip"></div> -->
-                </div>
-            </div>
+      <div class="flex-1">
+        <button
+          id="resetButton"
+          class="bg-blue-500 hover:bg-blue-700 text-white font-bold h-8 px-4 m-2 text-sm rounded"
+        >
+          Reset Selection
+        </button>
+        <div class="flex items-center justify-center">
+          <div class="visualization" id="lineChart" style="width: 100%"></div>
         </div>
-    </body>
+        <div class="visualization" id="timeline"></div>
+        <div class="visualization" id="tooltip"></div>
+      </div>
+    </div>
 
     <!-- <div class="flex justify-between w-full h-1/2">
       <div class="w-1/3 border-solid border-2 border-sky-500">
