--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="script.js"></script>
     <script src="./idioms/linechart.js"></script>
     <script src="./idioms/timeline.js"></script>
+    <script src="./idioms/events.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -23,6 +24,8 @@
         >
           Reset Selection
         </button>
+        <select id="event-select"></select>
+
         <div class="flex items-center justify-center">
           <div class="visualization" id="lineChart" style="width: 100%"></div>
         </div>
