--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <script src="https://d3js.org/d3.v7.js"></script>
     <script src="script.js"></script>
+    <script src="./utils/generalUtils.js"></script>
     <script src="./utils/globalVariables.js"></script>
     <script src="./utils/highlightUtils.js"></script>
     <script src="./idioms/linechart.js"></script>
     <script src="./idioms/timeline.js"></script>
     <script src="./idioms/ganttchart.js"></script>
     <script src="./idioms/chorddiagram.js"></script>
+    <script src="./idioms/choroplethmap.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css" />
 
@@ -22,8 +24,9 @@
       <h1 class="flex oswald-big justify-center">The Economic History of the European Union</h1>
 
       <div class="flex flex-1">
-        <div class="flex-1 bg-blue-200">
+        <div class="flex-1">
           <h3 class="oswald-small">Average Unemployment</h3>
+          <div id="choroplethmap" style="width: 100%;"></div>
         </div>
         <div class="flex-1 items-center justify-center">
           <h3 class="oswald-small">Cumulative Immigration</h3>
