--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div class="flex-1">
           <h3 class="oswald-small">Average Unemployment</h3>
           <div id="choroplethmap" style="width: 100%;"></div>
+          <div id="mapTooltip"></div>
         </div>
         <div class="flex-1 items-center justify-center">
           <h3 class="oswald-small">Cumulative Immigration</h3>
@@ -43,6 +44,7 @@
 
         <div class="flex items-center justify-center">
           <div id="lineChart" style="width: 100%"></div>
+          <div id="lineTooltip"></div>
         </div>
         <div id="timeline" style="height: 50px"></div>
 
