debugged some things the teacher pointed out

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <h1 class="flex oswald-big justify-center">The Economic History of the European Union</h1>
 
       <div class="flex flex-1">
+
         <div class="flex-1">
           <h3 class="oswald-small">Average Unemployment</h3>
           <div id="choroplethmap" style="width: 100%;"></div>
@@ -38,17 +39,25 @@
           <div id="chordDiagramEmigration" style="width: 100%"></div>
         </div>
       </div>
+
       <h3 class="oswald-small text-center">GDP Throughout The Years</h3>
+
       <div class="flex-1 flex">
+
+        <!-- <div style="width: 200px;"><svg id="countryLegend" height=100></svg></div> -->
+
+
         <div id="yAxisControls" style="width: 70px;"></div>
         <div class="flex-1">
+
           <div class="flex items-center justify-center">
             <div id="lineChart" style="width: 100%"></div>
           </div>
+          
           <div id="timeline" style="height: 50px"></div>
           <div id="ganttchart"></div>
-          <!-- <div id="tooltip"></div> -->
           <div id="lineTooltip"></div>
+
         </div>
       </div>
 
