--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="./utils/generalUtils.js"></script>
     <script src="./utils/globalVariables.js"></script>
     <script src="./utils/highlightUtils.js"></script>
+    <script src="./utils/swatches.js"></script>
     <script src="./idioms/linechart.js"></script>
     <script src="./idioms/timeline.js"></script>
     <script src="./idioms/ganttchart.js"></script>
@@ -22,6 +23,7 @@
 
     <div class="flex flex-col h-full">
       <h1 class="flex oswald-big justify-center">The Economic History of the European Union</h1>
+      <div class="flex oswald-big justify-center" id="swatches-container"></div>
 
       <div class="flex flex-1">
 
@@ -45,6 +47,7 @@
       <div class="flex-1 flex">
 
         <!-- <div style="width: 200px;"><svg id="countryLegend" height=100></svg></div> -->
+
 
 
         <div id="yAxisControls" style="width: 70px;"></div>
