debug: timeline tooltip was missing

--- a/index.html
+++ b/index.html
@@ -43,14 +43,7 @@
       </div>
 
       <h3 class="oswald-small text-center">GDP Throughout The Years</h3>
-      <!-- <div class="flex justify-center text-center">
-        <p class="orange-description">Southern Europe</p>
-        <p>&nbsp / &nbsp</p>
-        <p class="green-description">Northern Europe</p>
-      </div> -->
       <div class="flex-1 flex">
-
-        <!-- <div style="width: 200px;"><svg id="countryLegend" height=100></svg></div> -->
 
         <div id="yAxisControls" style="width: 70px;"></div>
         <div class="flex-1">
@@ -60,6 +53,8 @@
           </div>
           
           <div id="timeline" style="height: 50px"></div>
+          <div id="timelineTooltip"></div>
+
           <div id="ganttchart"></div>
           <div id="lineTooltip"></div>
 
