--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
 
       <div class="flex flex-1">
 
-        <div class="flex-1">
+        <div class="flex-1 ">
           <h3 class="oswald-small">Average Unemployment</h3>
+          <div class="ml-24 mt-1 absolute">
+            <label class="oswald-description">Border</label>
+            <input id="default-checkbox" onclick="toggleBorder()" type="checkbox" class="ml-2 mt-4 w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600" checked />
+          </div>
           <div id="mapTooltip"></div>
           <div id="choroplethmap" style="width: 100%;"></div>
         </div>
