--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
           <div id="mapTooltip"></div>
           <div id="choroplethmap" style="width: 100%;"></div>
         </div>
+
+        <div id="chordTooltip"></div>
         <div class="flex-1 items-center justify-center">
           <h3 class="oswald-small">Cumulative Immigration</h3>
           <div id="chordDiagramImmigration" style="width: 100%"></div>
